<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TV_affiche"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_textview_layout_height"
            android:text=""
            android:textSize="@dimen/main_textsize"
            android:gravity="right"
            android:layout_marginVertical="20dp"
            tools:ignore="MissingConstraints"
            tools:maxLength="12">
        </TextView>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_gridview_layout_height"
        android:rowCount="5"
        android:columnCount="4"
        android:layout_margin="@dimen/main_layout_margin"
        android:padding="@dimen/main_layout_padding"
        tools:ignore="MissingConstraints">

        <Button
            style="@style/widget.Calc.Button.Operateur"
            android:id="@+id/bt_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_clear"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Operateur"
            android:id="@+id/bt_diviser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_diviser"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Operateur"
            android:id="@+id/bt_multiplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_multiplier"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Operateur"
            android:id="@+id/bt_supprimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_supprimer"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Nombre"
            android:id="@+id/bt_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_7"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Nombre"
            android:id="@+id/bt_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_8"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Nombre"
            android:id="@+id/bt_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_9"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Operateur"
            android:id="@+id/bt_soustraire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_moins"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Nombre"
            android:id="@+id/bt_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_4"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Nombre"
            android:id="@+id/bt_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_5"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Nombre"
            android:id="@+id/bt_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_6"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Operateur"
            android:id="@+id/bt_additionner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_additionner"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            />
        <Button
            style="@style/widget.Calc.Button.Nombre"
            android:id="@+id/bt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Nombre"
            android:id="@+id/bt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Nombre"
            android:id="@+id/bt_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Operateur"
            android:id="@+id/bt_egal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_egal"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            android:id="@+id/bt_invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/main_layout_margin"
            android:visibility="invisible"
            />
        <Button
            style="@style/widget.Calc.Button.Nombre"
            android:id="@+id/bt_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />
        <Button
            style="@style/widget.Calc.Button.Operateur"
            android:id="@+id/bt_virgule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_virgule"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:onClick="clickButton"
            android:layout_margin="@dimen/main_layout_margin"
            android:textSize="@dimen/main_button_textsize"
            />

    </GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>